more debugging of npcs/trainers